AutoRefactor'ed use Map.entrySet() instead of Map.keySet() in a loop